<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/menuSettings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load"
        android:title="@string/menuImport"
        android:orderInCategory="125"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug"
        android:orderInCategory="135"
        android:title="@string/menuDebug"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/menuExit"
        android:orderInCategory="150"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_alarm"
        android:orderInCategory="200"
        android:title=""
        android:actionLayout="@layout/alarm_refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
    </item>
    <item
        android:id="@+id/action_connection"
        android:orderInCategory="300"
        android:title=""
        android:icon="@drawable/ic_disconnect"
        app:showAsAction="always">
    </item>
</menu>
