<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:text="@string/mediaFastBackward"
            android:id="@+id/PL_start"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="#f2fafb"
            android:layout_alignParentLeft="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:text="@string/mediaBackward"
            android:id="@+id/PL_back"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/PL_start"
            android:background="#f2fafb"
            android:layout_toRightOf="@+id/PL_start" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:text="@string/mediaFastForward"
            android:id="@+id/PL_finish"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#f2fafb"
            android:layout_alignParentRight="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:text="@string/mediaForward"
            android:id="@+id/PL_next"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/PL_finish"
            android:background="#f2fafb"
            android:layout_toLeftOf="@+id/PL_finish" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mediaDivider"
            android:id="@+id/textView2"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mediaTotal"
            android:id="@+id/PL_total"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mediaFirst"
            android:id="@+id/PL_first"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/textView2"
            android:layout_toLeftOf="@+id/textView2" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mediaTrack1"
        android:id="@+id/PL_line01"
        android:ellipsize="end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mediaTrack2"
        android:id="@+id/PL_line02"
        android:ellipsize="end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mediaTrack3"
        android:id="@+id/PL_line03"
        android:ellipsize="end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/PL_line04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorAccent"
        android:ellipsize="end"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp"
        android:text="@string/mediaTrack4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/PL_line05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorAccent"
        android:ellipsize="end"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="5dp"
        android:text="@string/mediaTrack5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mediaTrack6"
        android:id="@+id/PL_line06"
        android:ellipsize="end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mediaTrack7"
        android:id="@+id/PL_line07"
        android:ellipsize="end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mediaTrack8"
        android:id="@+id/PL_line08"
        android:ellipsize="end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mediaTrack9"
        android:id="@+id/PL_line09"
        android:ellipsize="end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mediaTrack10"
        android:id="@+id/PL_line10"
        android:ellipsize="end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/colorAccent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediaClear"
            android:id="@+id/PL_clear"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="#f2fafb"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediaAdd"
            android:id="@+id/PL_add"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#f2fafb" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediaLoad"
            android:id="@+id/PL_load"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#f2fafb"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


</LinearLayout>