<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.cpc.smartflatview.LoginActivity">

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:ems="10"
                    android:id="@+id/code"
                    android:password="true"
                    android:text="@string/passwordDefault"
                    android:textAlignment="center"
                    android:hint="@string/code_hint"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button android:id="@+id/cancel_button" style="?android:textAppearanceSmall"
                    android:layout_width="150dp" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_cancel"
                    android:textStyle="bold" />
                <Button android:id="@+id/enter_button" style="?android:textAppearanceSmall"
                    android:layout_width="150dp" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:layout_marginLeft="23dp"
                    android:layout_marginStart="23dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
